# bazel-nixpkgs-docker-repro

./: .gitignore  README.md  WORKSPACE.bazel
python/: BUILD.bazel  main.py
