load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
# =====
# rules: docker
# =====
rules_docker_version = "0.23.0"

http_archive(
    name = "io_bazel_rules_docker",
    sha256 = "85ffff62a4c22a74dbd98d05da6cf40f497344b3dbf1e1ab0a37ab2a1a6ca014",
    strip_prefix = "rules_docker-{version}".format(version=rules_docker_version),
    urls = [
        "https://github.com/bazelbuild/rules_docker/releases/download/v{version}/rules_docker-v{version}.tar.gz".format(version=rules_docker_version),
    ],
)
# =====
# rules: gazelle
# =====
rules_gazelle_version = "0.24.0"

http_archive(
    name = "bazel_gazelle",
    sha256 = "de69a09dc70417580aabf20a28619bb3ef60d038470c7cf8442fafcf627c21cb",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v{version}/bazel-gazelle-v{version}.tar.gz".format(version=rules_gazelle_version),
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v{version}/bazel-gazelle-v{version}.tar.gz".format(version=rules_gazelle_version),
    ],
)

# =====
# rules: go
# =====
rules_go_version = "0.30.0"

http_archive(
    name = "io_bazel_rules_go",
    sha256 = "d6b2513456fe2229811da7eb67a444be7785f5323c6708b38d851d2b51e54d83",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v{version}/rules_go-v{version}.zip".format(version=rules_go_version),
        "https://github.com/bazelbuild/rules_go/releases/download/v{version}/rules_go-v{version}.zip".format(version=rules_go_version),
    ],
)

load("@io_bazel_rules_go//go:deps.bzl", "go_rules_dependencies")

go_rules_dependencies()

# =====
# rules: python
# =====
rules_python_version = "0.7.0"

http_archive(
    name = "rules_python",
    sha256 = "15f84594af9da06750ceb878abbf129241421e3abbd6e36893041188db67f2fb",
    strip_prefix = "rules_python-{version}".format(version=rules_python_version),
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/{version}.tar.gz".format(version=rules_python_version),
)

# =====
# rules: nixpkgs
# =====
rules_nixpkgs_commit = "3b6323b86585e6ace3a8900eb55ec15f114c5753"

http_archive(
    name = "io_tweag_rules_nixpkgs",
    sha256 = "73f29156a18aecffcc409dbdac3d1911de16a4f43d3752a5921e3eeacd16d44b",
    strip_prefix = "rules_nixpkgs-{commit}".format(commit=rules_nixpkgs_commit),
    urls = [
      "https://github.com/betaboon/rules_nixpkgs/archive/{commit}.tar.gz".format(commit=rules_nixpkgs_commit),
    ],
)

load("@io_tweag_rules_nixpkgs//nixpkgs:repositories.bzl", "rules_nixpkgs_dependencies")

rules_nixpkgs_dependencies()

load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_git_repository")

nixpkgs_git_repository(
    name = "nixpkgs",
    revision = "21.11",
    sha256 = "c77bb41cf5dd82f4718fa789d49363f512bb6fa6bc25f8d60902fe2d698ed7cc",
)

# =====
# toolchain: go
# =====
load("@io_tweag_rules_nixpkgs//nixpkgs:toolchains/go.bzl", "nixpkgs_go_configure")

nixpkgs_go_configure(
    repository = "@nixpkgs",
    sdk_name = "nix_go",
)

load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains")

go_register_toolchains(version = "1.17.1")

# =====
# toolchain: python
# =====
load("@io_tweag_rules_nixpkgs//nixpkgs:nixpkgs.bzl", "nixpkgs_python_configure")

nixpkgs_python_configure(
    python3_attribute_path = "python39",
    repository = "@nixpkgs",
)

load("@rules_python//python:repositories.bzl", "python_register_toolchains")

python_register_toolchains(
    name = "python3_9",
    python_version = "3.9",
)

# =====
# gazelle
# =====
load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")

# see: https://github.com/bazelbuild/bazel-gazelle/issues/678#issuecomment-615319010
gazelle_dependencies(go_repository_default_config = "@//:WORKSPACE.bazel")

# =====
# toolchain: docker
# =====
load("@io_bazel_rules_docker//repositories:repositories.bzl", container_repositories = "repositories")

container_repositories()

load("@io_bazel_rules_docker//repositories:deps.bzl", container_deps = "deps")

container_deps()

load("@io_bazel_rules_docker//python3:image.bzl", container_repositories_python3 = "repositories")
# FIXME this breaks `bazel run --config=nix //python:main` on nixos
container_repositories_python3()
