load("@rules_python//python:defs.bzl", "py_binary")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

py_binary(
    name = "main",
    srcs = ["main.py"],
)

py3_image(
    name = "main_py",
    srcs = ["main.py"],
    main = "main.py",
)

container_image(
    name = "main_container",
    base = ":main_py",
    cmd = ["/etc"],
)
